Adding generics to compare between current implementation